src/parser/picl-parser.output
Terminals unused in grammar

   T_DYN
   T_AFT
   T_BEF
   T_FIN
   T_MINUS
   DOUBLE_ANB
   DOUBLE_PIPE


文法

    0 $accept: top_level "end of file"

    1 top_level: %empty
    2          | decls
    3          | T_NEWLINE decls

    4 new_node_stack: %empty

    5 decls: decl
    6      | decls decl

    7 decl: func_decl
    8     | seq_decl
    9     | def_decl
   10     | cla_decl
   11     | beh_decl

   12 def_newline: T_NEWLINE
   13            | '='

   14 func_decl: T_FUN func_head def_newline func_body

   15 seq_decl: T_SEQ keyword_and_ident extentions def_newline seq_members_nodes

   16 seq_members_nodes: new_node_stack seq_members

   17 seq_members: seq_member
   18            | seq_members seq_member

   19 seq_member: cla_member
   20           | T_CATCH catch_head def_newline func_body
   21           | T_REDEF '{' redef_decls '}'

   22 redef_decls: redef_decl
   23            | redef_decls redef_decl

   24 redef_decl: cla_decl
   25           | beh_decl

   26 def_decl: T_DEF keyword_and_ident def_newline decl_body

   27 decl_body: decl_value
   28          | decl_value T_NEWLINE

   29 decl_value: decl_primary
   30           | decl_value '|' decl_value

   31 decl_primary: keyword_and_ident
   32             | primary_value

   33 cla_decl: T_CLA keyword_and_ident extentions def_newline cla_members_nodes

   34 extentions: %empty
   35           | ':' new_node_stack indent_values

   36 indent_values: indent_value
   37              | indent_values ',' indent_value

   38 cla_members_nodes: new_node_stack cla_members

   39 cla_members: cla_member
   40            | cla_members cla_member

   41 cla_member: T_PUB keyword_and_ident T_ASSIGN field_value
   42           | T_PRI keyword_and_ident T_ASSIGN field_value
   43           | T_PUB func_head def_newline func_body
   44           | T_PRI func_head def_newline func_body
   45           | T_ALI keyword_and_ident '=' alias_value

   46 field_value: expr T_NEWLINE

   47 alias_value: indent_value T_NEWLINE

   48 beh_decl: T_BEH keyword_and_ident extentions def_newline beh_members_nodes

   49 beh_members_nodes: new_node_stack beh_members

   50 beh_members: beh_member
   51            | beh_members beh_member

   52 beh_member: T_PUB keyword_and_ident T_ASSIGN expr
   53           | T_PRI keyword_and_ident T_ASSIGN expr
   54           | T_PRI func_head '=' func_body

   55 func_body: stmts_nodes
   56          | stmts_nodes let_decls_nodes

   57 let_decls_nodes: new_node_stack let_decls

   58 let_decls: let_decl
   59          | let_decls let_decl

   60 let_decl: T_LET func_head def_newline stmts_nodes

   61 stmt_newline: T_NEWLINE
   62             | T_ARROW

   63 then_newline: T_NEWLINE
   64             | T_THEN

   65 stmts_nodes: new_node_stack stmts

   66 stmts: stmt_line T_NEWLINE
   67      | stmt_line
   68      | guard_stmts

   69 stmt_line: stmt_line T_NEWLINE stmt
   70          | stmt

   71 guard_stmts: guard_stmt
   72            | guard_stmts guard_stmt

   73 guard_stmt: '|' expr stmt_newline without_guard_stmts_nodes

   74 without_guard_stmts_nodes: new_node_stack without_guard_stmts

   75 without_guard_stmts: without_guard_stmt_line T_NEWLINE
   76                    | without_guard_stmt_line

   77 without_guard_stmt_line: without_guard_stmt_line T_NEWLINE stmt
   78                        | stmt

   79 do_newline: T_NEWLINE
   80           | T_DO

   81 list_stmt_chain: T_FOR expr list_stmt
   82                | list_stmt_chain list_stmt

   83 list_stmt: T_EACH keyword_and_ident do_newline stmts_nodes
   84          | T_EACH keyword_and_ident when_stmts_nodes
   85          | T_MAP keyword_and_ident do_newline stmts_nodes
   86          | T_MAP keyword_and_ident when_stmts_nodes
   87          | T_FILTER keyword_and_ident do_newline stmts_nodes
   88          | T_FILTER keyword_and_ident when_stmts_nodes
   89          | T_REDUCE keyword_and_ident ',' keyword_and_ident do_newline stmts_nodes

   90 stmt: expr
   91     | T_RETURN expr
   92     | T_RETURN
   93     | T_THROW expr
   94     | T_THROW
   95     | T_BREAK
   96     | T_CONTINUE
   97     | T_ECHO expr
   98     | expr T_ASSIGN expr

   99 when_stmts_nodes: new_node_stack when_stmts

  100 when_stmts: when_stmt
  101           | when_stmts when_stmt

  102 when_stmt: T_WHEN expr stmt_newline stmts_nodes
  103          | T_ELSE stmts_nodes

  104 expr: primary
  105     | list_stmt_chain T_END
  106     | T_IF expr then_newline stmts_nodes T_END
  107     | T_IF expr then_newline stmts_nodes T_ELSE stmts_nodes T_END
  108     | T_WHILE expr do_newline stmts_nodes T_END
  109     | T_CASE expr when_stmts_nodes T_END
  110     | expr '.' keyword_and_ident
  111     | expr '(' call_func_args
  112     | expr '{' call_func_stmts
  113     | expr '+' expr
  114     | expr '-' expr
  115     | expr '*' expr
  116     | expr '/' expr
  117     | expr '%' expr
  118     | expr T_AND expr
  119     | expr T_OR expr
  120     | expr T_NOT expr
  121     | expr '^' expr
  122     | expr '$' expr
  123     | expr DOUBLE_EQUAL expr
  124     | expr NOT_EQUAL expr
  125     | expr GT_EQUAL expr
  126     | expr LT_EQUAL expr
  127     | expr '>' expr
  128     | expr '<' expr
  129     | expr '&' expr
  130     | expr COMPARE expr
  131     | expr T_MOVE expr
  132     | expr ':' expr
  133     | expr '`' expr '`' expr
  134     | '-' expr
  135     | '&' expr

  136 indent_value: primary
  137             | indent_value '.' keyword_and_ident

  138 primary: primary_value
  139        | keyword_and_ident
  140        | '[' ']'
  141        | '[' dict_values ']'
  142        | '(' expr ')'
  143        | '{' stmts_nodes '}'

  144 call_func_args: ')'
  145               | new_node_stack args ')'

  146 call_func_stmts: '}'
  147                | stmts_nodes '}'

  148 args: arg
  149     | args ',' arg

  150 arg: expr
  151    | '-'
  152    | DICT_IDENT expr

  153 dict_values: dict_value
  154            | dict_values ',' dict_value

  155 dict_value: DICT_IDENT expr
  156           | keyword_and_ident ':' expr
  157           | STRING_LITERAL ':' expr

  158 func_head: keyword_and_ident
  159          | keyword_and_ident '(' func_def_args
  160          | keyword_and_ident '(' func_def_args '{' func_def_keyword_args

  161 catch_head: '(' new_node_stack args_def ')'
  162           | keyword_and_ident '(' new_node_stack args_def ')'

  163 func_def_args: ')'
  164              | new_node_stack args_def ')'

  165 func_def_keyword_args: '}'
  166                      | new_node_stack args_def '}'

  167 args_def: arg_def
  168         | args_def ',' arg_def

  169 arg_def: arg_pattern
  170        | keyword_and_ident arg_pattern

  171 arg_pattern: keyword_and_ident
  172            | primary_value

  173 primary_value: LONG_LITERAL
  174              | STRING_LITERAL

  175 keyword_and_ident: IDENT
  176                  | T_IF
  177                  | T_THEN
  178                  | T_ELSE
  179                  | T_WHILE
  180                  | T_THAT
  181                  | T_EACH
  182                  | T_MAP
  183                  | T_REDUCE
  184                  | T_FILTER
  185                  | T_ECHO


出現位置の規則による終端

"end of file" (0) 0
'$' (36) 122
'%' (37) 117
'&' (38) 129 135
'(' (40) 111 142 159 160 161 162
')' (41) 142 144 145 161 162 163 164
'*' (42) 115
'+' (43) 113
',' (44) 37 89 149 154 168
'-' (45) 114 134 151
'.' (46) 110 137
'/' (47) 116
':' (58) 35 132 156 157
'<' (60) 128
'=' (61) 13 45 54
'>' (62) 127
'[' (91) 140 141
']' (93) 140 141
'^' (94) 121
'`' (96) 133
'{' (123) 21 112 143 160
'|' (124) 30 73
'}' (125) 21 143 146 147 165 166
error (256)
T_SEQ (258) 15
T_FUN (259) 14
T_DEF (260) 26
T_CLA (261) 33
T_BEH (262) 48
T_PUB (263) 41 43 52
T_PRI (264) 42 44 53 54
T_DYN (265)
T_ALI (266) 45
T_CATCH (267) 20
T_REDEF (268) 21
T_AFT (269)
T_BEF (270)
T_LET (271) 60
T_FIN (272)
T_RETURN (273) 91 92
T_THROW (274) 93 94
T_IF (275) 106 107 176
T_THEN (276) 64 177
T_ELSE (277) 103 107 178
T_WHILE (278) 108 179
T_DO (279) 80
T_THAT (280) 180
T_CASE (281) 109
T_WHEN (282) 102
T_EACH (283) 83 84 181
T_MAP (284) 85 86 182
T_REDUCE (285) 89 183
T_FILTER (286) 87 88 184
T_END (287) 105 106 107 108 109
T_BREAK (288) 95
T_CONTINUE (289) 96
T_ECHO (290) 97 185
T_MINUS (291)
T_ASSIGN (292) 41 42 52 53 98
T_MOVE (293) 131
T_ARROW (294) 62
T_NEWLINE (295) 3 12 28 46 47 61 63 66 69 75 77 79
DOUBLE_EQUAL (296) 123
NOT_EQUAL (297) 124
GT_EQUAL (298) 125
LT_EQUAL (299) 126
T_AND (300) 118
T_OR (301) 119
T_NOT (302) 120
DOUBLE_ANB (303)
DOUBLE_PIPE (304)
COMPARE (305) 130
STRING_LITERAL (306) 157 174
IDENT (307) 175
DICT_IDENT (308) 152 155
LONG_LITERAL (309) 173
T_FOR (310) 81
NEG (311)


出現位置の規則による非終端

$accept (79)
    左辺: 0
top_level (80)
    左辺: 1 2 3, 右辺: 0
new_node_stack (81)
    左辺: 4, 右辺: 16 35 38 49 57 65 74 99 145 161 162 164 166
decls (82)
    左辺: 5 6, 右辺: 2 3 6
decl (83)
    左辺: 7 8 9 10 11, 右辺: 5 6
def_newline (84)
    左辺: 12 13, 右辺: 14 15 20 26 33 43 44 48 60
func_decl (85)
    左辺: 14, 右辺: 7
seq_decl (86)
    左辺: 15, 右辺: 8
seq_members_nodes (87)
    左辺: 16, 右辺: 15
seq_members (88)
    左辺: 17 18, 右辺: 16 18
seq_member (89)
    左辺: 19 20 21, 右辺: 17 18
redef_decls (90)
    左辺: 22 23, 右辺: 21 23
redef_decl (91)
    左辺: 24 25, 右辺: 22 23
def_decl (92)
    左辺: 26, 右辺: 9
decl_body (93)
    左辺: 27 28, 右辺: 26
decl_value (94)
    左辺: 29 30, 右辺: 27 28 30
decl_primary (95)
    左辺: 31 32, 右辺: 29
cla_decl (96)
    左辺: 33, 右辺: 10 24
extentions (97)
    左辺: 34 35, 右辺: 15 33 48
indent_values (98)
    左辺: 36 37, 右辺: 35 37
cla_members_nodes (99)
    左辺: 38, 右辺: 33
cla_members (100)
    左辺: 39 40, 右辺: 38 40
cla_member (101)
    左辺: 41 42 43 44 45, 右辺: 19 39 40
field_value (102)
    左辺: 46, 右辺: 41 42
alias_value (103)
    左辺: 47, 右辺: 45
beh_decl (104)
    左辺: 48, 右辺: 11 25
beh_members_nodes (105)
    左辺: 49, 右辺: 48
beh_members (106)
    左辺: 50 51, 右辺: 49 51
beh_member (107)
    左辺: 52 53 54, 右辺: 50 51
func_body (108)
    左辺: 55 56, 右辺: 14 20 43 44 54
let_decls_nodes (109)
    左辺: 57, 右辺: 56
let_decls (110)
    左辺: 58 59, 右辺: 57 59
let_decl (111)
    左辺: 60, 右辺: 58 59
stmt_newline (112)
    左辺: 61 62, 右辺: 73 102
then_newline (113)
    左辺: 63 64, 右辺: 106 107
stmts_nodes (114)
    左辺: 65, 右辺: 55 56 60 83 85 87 89 102 103 106 107 108 143
    147
stmts (115)
    左辺: 66 67 68, 右辺: 65
stmt_line (116)
    左辺: 69 70, 右辺: 66 67 69
guard_stmts (117)
    左辺: 71 72, 右辺: 68 72
guard_stmt (118)
    左辺: 73, 右辺: 71 72
without_guard_stmts_nodes (119)
    左辺: 74, 右辺: 73
without_guard_stmts (120)
    左辺: 75 76, 右辺: 74
without_guard_stmt_line (121)
    左辺: 77 78, 右辺: 75 76 77
do_newline (122)
    左辺: 79 80, 右辺: 83 85 87 89 108
list_stmt_chain (123)
    左辺: 81 82, 右辺: 82 105
list_stmt (124)
    左辺: 83 84 85 86 87 88 89, 右辺: 81 82
stmt (125)
    左辺: 90 91 92 93 94 95 96 97 98, 右辺: 69 70 77 78
when_stmts_nodes (126)
    左辺: 99, 右辺: 84 86 88 109
when_stmts (127)
    左辺: 100 101, 右辺: 99 101
when_stmt (128)
    左辺: 102 103, 右辺: 100 101
expr (129)
    左辺: 104 105 106 107 108 109 110 111 112 113 114 115 116 117
    118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133
    134 135, 右辺: 46 52 53 73 81 90 91 93 97 98 102 106 107 108
    109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124
    125 126 127 128 129 130 131 132 133 134 135 142 150 152 155 156
    157
indent_value (130)
    左辺: 136 137, 右辺: 36 37 47 137
primary (131)
    左辺: 138 139 140 141 142 143, 右辺: 104 136
call_func_args (132)
    左辺: 144 145, 右辺: 111
call_func_stmts (133)
    左辺: 146 147, 右辺: 112
args (134)
    左辺: 148 149, 右辺: 145 149
arg (135)
    左辺: 150 151 152, 右辺: 148 149
dict_values (136)
    左辺: 153 154, 右辺: 141 154
dict_value (137)
    左辺: 155 156 157, 右辺: 153 154
func_head (138)
    左辺: 158 159 160, 右辺: 14 43 44 54 60
catch_head (139)
    左辺: 161 162, 右辺: 20
func_def_args (140)
    左辺: 163 164, 右辺: 159 160
func_def_keyword_args (141)
    左辺: 165 166, 右辺: 160
args_def (142)
    左辺: 167 168, 右辺: 161 162 164 166 168
arg_def (143)
    左辺: 169 170, 右辺: 167 168
arg_pattern (144)
    左辺: 171 172, 右辺: 169 170
primary_value (145)
    左辺: 173 174, 右辺: 32 138 172
keyword_and_ident (146)
    左辺: 175 176 177 178 179 180 181 182 183 184 185, 右辺: 15
    26 31 33 41 42 45 48 52 53 83 84 85 86 87 88 89 110 137 139 156
    158 159 160 162 170 171


State 0

    0 $accept: . top_level "end of file"
    1 top_level: . %empty  ["end of file"]
    2          | . decls
    3          | . T_NEWLINE decls
    5 decls: . decl
    6      | . decls decl
    7 decl: . func_decl
    8     | . seq_decl
    9     | . def_decl
   10     | . cla_decl
   11     | . beh_decl
   14 func_decl: . T_FUN func_head def_newline func_body
   15 seq_decl: . T_SEQ keyword_and_ident extentions def_newline seq_members_nodes
   26 def_decl: . T_DEF keyword_and_ident def_newline decl_body
   33 cla_decl: . T_CLA keyword_and_ident extentions def_newline cla_members_nodes
   48 beh_decl: . T_BEH keyword_and_ident extentions def_newline beh_members_nodes

    T_SEQ      shift, and go to state 1
    T_FUN      shift, and go to state 2
    T_DEF      shift, and go to state 3
    T_CLA      shift, and go to state 4
    T_BEH      shift, and go to state 5
    T_NEWLINE  shift, and go to state 6

    $default  reduce using rule 1 (top_level)

    top_level  go to state 7
    decls      go to state 8
    decl       go to state 9
    func_decl  go to state 10
    seq_decl   go to state 11
    def_decl   go to state 12
    cla_decl   go to state 13
    beh_decl   go to state 14


State 1

   15 seq_decl: T_SEQ . keyword_and_ident extentions def_newline seq_members_nodes
  175 keyword_and_ident: . IDENT
  176                  | . T_IF
  177                  | . T_THEN
  178                  | . T_ELSE
  179                  | . T_WHILE
  180                  | . T_THAT
  181                  | . T_EACH
  182                  | . T_MAP
  183                  | . T_REDUCE
  184                  | . T_FILTER
  185                  | . T_ECHO

    T_IF      shift, and go to state 15
    T_THEN    shift, and go to state 16
    T_ELSE    shift, and go to state 17
    T_WHILE   shift, and go to state 18
    T_THAT    shift, and go to state 19
    T_EACH    shift, and go to state 20
    T_MAP     shift, and go to state 21
    T_REDUCE  shift, and go to state 22
    T_FILTER  shift, and go to state 23
    T_ECHO    shift, and go to state 24
    IDENT     shift, and go to state 25

    keyword_and_ident  go to state 26


State 2

   14 func_decl: T_FUN . func_head def_newline func_body
  158 func_head: . keyword_and_ident
  159          | . keyword_and_ident '(' func_def_args
  160          | . keyword_and_ident '(' func_def_args '{' func_def_keyword_args
  175 keyword_and_ident: . IDENT
  176                  | . T_IF
  177                  | . T_THEN
  178                  | . T_ELSE
  179                  | . T_WHILE
  180                  | . T_THAT
  181                  | . T_EACH
  182                  | . T_MAP
  183                  | . T_REDUCE
  184                  | . T_FILTER
  185                  | . T_ECHO

    T_IF      shift, and go to state 15
    T_THEN    shift, and go to state 16
    T_ELSE    shift, and go to state 17
    T_WHILE   shift, and go to state 18
    T_THAT    shift, and go to state 19
    T_EACH    shift, and go to state 20
    T_MAP     shift, and go to state 21
    T_REDUCE  shift, and go to state 22
    T_FILTER  shift, and go to state 23
    T_ECHO    shift, and go to state 24
    IDENT     shift, and go to state 25

    func_head          go to state 27
    keyword_and_ident  go to state 28


State 3

   26 def_decl: T_DEF . keyword_and_ident def_newline decl_body
  175 keyword_and_ident: . IDENT
  176                  | . T_IF
  177                  | . T_THEN
  178                  | . T_ELSE
  179                  | . T_WHILE
  180                  | . T_THAT
  181                  | . T_EACH
  182                  | . T_MAP
  183                  | . T_REDUCE
  184                  | . T_FILTER
  185                  | . T_ECHO

    T_IF      shift, and go to state 15
    T_THEN    shift, and go to state 16
    T_ELSE    shift, and go to state 17
    T_WHILE   shift, and go to state 18
    T_THAT    shift, and go to state 19
    T_EACH    shift, and go to state 20
    T_MAP     shift, and go to state 21
    T_REDUCE  shift, and go to state 22
    T_FILTER  shift, and go to state 23
    T_ECHO    shift, and go to state 24
    IDENT     shift, and go to state 25

    keyword_and_ident  go to state 29


State 4

   33 cla_decl: T_CLA . keyword_and_ident extentions def_newline cla_members_nodes
  175 keyword_and_ident: . IDENT
  176                  | . T_IF
  177                  | . T_THEN
  178                  | . T_ELSE
  179                  | . T_WHILE
  180                  | . T_THAT
  181                  | . T_EACH
  182                  | . T_MAP
  183                  | . T_REDUCE
  184                  | . T_FILTER
  185                  | . T_ECHO

    T_IF      shift, and go to state 15
    T_THEN    shift, and go to state 16
    T_ELSE    shift, and go to state 17
    T_WHILE   shift, and go to state 18
    T_THAT    shift, and go to state 19
    T_EACH    shift, and go to state 20
    T_MAP     shift, and go to state 21
    T_REDUCE  shift, and go to state 22
    T_FILTER  shift, and go to state 23
    T_ECHO    shift, and go to state 24
    IDENT     shift, and go to state 25

    keyword_and_ident  go to state 30


State 5

   48 beh_decl: T_BEH . keyword_and_ident extentions def_newline beh_members_nodes
  175 keyword_and_ident: . IDENT
  176                  | . T_IF
  177                  | . T_THEN
  178                  | . T_ELSE
  179                  | . T_WHILE
  180                  | . T_THAT
  181                  | . T_EACH
  182                  | . T_MAP
  183                  | . T_REDUCE
  184                  | . T_FILTER
  185                  | . T_ECHO

    T_IF      shift, and go to state 15
    T_THEN    shift, and go to state 16
    T_ELSE    shift, and go to state 17
    T_WHILE   shift, and go to state 18
    T_THAT    shift, and go to state 19
    T_EACH    shift, and go to state 20
    T_MAP     shift, and go to state 21
    T_REDUCE  shift, and go to state 22
    T_FILTER  shift, and go to state 23
    T_ECHO    shift, and go to state 24
    IDENT     shift, and go to state 25

    keyword_and_ident  go to state 31


State 6

    3 top_level: T_NEWLINE . decls
    5 decls: . decl
    6      | . decls decl
    7 decl: . func_decl
    8     | . seq_decl
    9     | . def_decl
   10     | . cla_decl
   11     | . beh_decl
   14 func_decl: . T_FUN func_head def_newline func_body
   15 seq_decl: . T_SEQ keyword_and_ident extentions def_newline seq_members_nodes
   26 def_decl: . T_DEF keyword_and_ident def_newline decl_body
   33 cla_decl: . T_CLA keyword_and_ident extentions def_newline cla_members_nodes
   48 beh_decl: . T_BEH keyword_and_ident extentions def_newline beh_members_nodes

    T_SEQ  shift, and go to state 1
    T_FUN  shift, and go to state 2
    T_DEF  shift, and go to state 3
    T_CLA  shift, and go to state 4
    T_BEH  shift, and go to state 5

    decls      go to state 32
    decl       go to state 9
    func_decl  go to state 10
    seq_decl   go to state 11
    def_decl   go to state 12
    cla_decl   go to state 13
    beh_decl   go to state 14


State 7

    0 $accept: top_level . "end of file"

    "end of file"  shift, and go to state 33


State 8

    2 top_level: decls .  ["end of file"]
    6 decls: decls . decl
    7 decl: . func_decl
    8     | . seq_decl
    9     | . def_decl
   10     | . cla_decl
   11     | . beh_decl
   14 func_decl: . T_FUN func_head def_newline func_body
   15 seq_decl: . T_SEQ keyword_and_ident extentions def_newline seq_members_nodes
   26 def_decl: . T_DEF keyword_and_ident def_newline decl_body
   33 cla_decl: . T_CLA keyword_and_ident extentions def_newline cla_members_nodes
   48 beh_decl: . T_BEH keyword_and_ident extentions def_newline beh_members_nodes

    T_SEQ  shift, and go to state 1
    T_FUN  shift, and go to state 2
    T_DEF  shift, and go to state 3
    T_CLA  shift, and go to state 4
    T_BEH  shift, and go to state 5

    $default  reduce using rule 2 (top_level)

    decl       go to state 34
    func_decl  go to state 10
    seq_decl   go to state 11
    def_decl   go to state 12
    cla_decl   go to state 13
    beh_decl   go to state 14


State 9

    5 decls: decl .

    $default  reduce using rule 5 (decls)


State 10

    7 decl: func_decl .

    $default  reduce using rule 7 (decl)


State 11

    8 decl: seq_decl .

    $default  reduce using rule 8 (decl)


State 12

    9 decl: def_decl .

    $default  reduce using rule 9 (decl)


State 13

   10 decl: cla_decl .

    $default  reduce using rule 10 (decl)


State 14

   11 decl: beh_decl .

    $default  reduce using rule 11 (decl)


State 15

  176 keyword_and_ident: T_IF .

    $default  reduce using rule 176 (keyword_and_ident)


State 16

  177 keyword_and_ident: T_THEN .

    $default  reduce using rule 177 (keyword_and_ident)


State 17

  178 keyword_and_ident: T_ELSE .

    $default  reduce using rule 178 (keyword_and_ident)


State 18

  179 keyword_and_ident: T_WHILE .

    $default  reduce using rule 179 (keyword_and_ident)


State 19

  180 keyword_and_ident: T_THAT .

    $default  reduce using rule 180 (keyword_and_ident)


State 20

  181 keyword_and_ident: T_EACH .

    $default  reduce using rule 181 (keyword_and_ident)


State 21

  182 keyword_and_ident: T_MAP .

    $default  reduce using rule 182 (keyword_and_ident)


State 22

  183 keyword_and_ident: T_REDUCE .

    $default  reduce using rule 183 (keyword_and_ident)


State 23

  184 keyword_and_ident: T_FILTER .

    $default  reduce using rule 184 (keyword_and_ident)


State 24

  185 keyword_and_ident: T_ECHO .

    $default  reduce using rule 185 (keyword_and_ident)


State 25

  175 keyword_and_ident: IDENT .

    $default  reduce using rule 175 (keyword_and_ident)


State 26

   15 seq_decl: T_SEQ keyword_and_ident . extentions def_newline seq_members_nodes
   34 extentions: . %empty  [T_NEWLINE, '=']
   35           | . ':' new_node_stack indent_values

    ':'  shift, and go to state 35

    $default  reduce using rule 34 (extentions)

    extentions  go to state 36


State 27

   12 def_newline: . T_NEWLINE
   13            | . '='
   14 func_decl: T_FUN func_head . def_newline func_body

    T_NEWLINE  shift, and go to state 37
    '='        shift, and go to state 38

    def_newline  go to state 39


State 28

  158 func_head: keyword_and_ident .  [T_NEWLINE, '=']
  159          | keyword_and_ident . '(' func_def_args
  160          | keyword_and_ident . '(' func_def_args '{' func_def_keyword_args

    '('  shift, and go to state 40

    $default  reduce using rule 158 (func_head)


State 29

   12 def_newline: . T_NEWLINE
   13            | . '='
   26 def_decl: T_DEF keyword_and_ident . def_newline decl_body

    T_NEWLINE  shift, and go to state 37
    '='        shift, and go to state 38

    def_newline  go to state 41


State 30

   33 cla_decl: T_CLA keyword_and_ident . extentions def_newline cla_members_nodes
   34 extentions: . %empty  [T_NEWLINE, '=']
   35           | . ':' new_node_stack indent_values

    ':'  shift, and go to state 35

    $default  reduce using rule 34 (extentions)

    extentions  go to state 42


State 31

   34 extentions: . %empty  [T_NEWLINE, '=']
   35           | . ':' new_node_stack indent_values
   48 beh_decl: T_BEH keyword_and_ident . extentions def_newline beh_members_nodes

    ':'  shift, and go to state 35

    $default  reduce using rule 34 (extentions)

    extentions  go to state 43


State 32

    3 top_level: T_NEWLINE decls .  ["end of file"]
    6 decls: decls . decl
    7 decl: . func_decl
    8     | . seq_decl
    9     | . def_decl
   10     | . cla_decl
   11     | . beh_decl
   14 func_decl: . T_FUN func_head def_newline func_body
   15 seq_decl: . T_SEQ keyword_and_ident extentions def_newline seq_members_nodes
   26 def_decl: . T_DEF keyword_and_ident def_newline decl_body
   33 cla_decl: . T_CLA keyword_and_ident extentions def_newline cla_members_nodes
   48 beh_decl: . T_BEH keyword_and_ident extentions def_newline beh_members_nodes

    T_SEQ  shift, and go to state 1
    T_FUN  shift, and go to state 2
    T_DEF  shift, and go to state 3
    T_CLA  shift, and go to state 4
    T_BEH  shift, and go to state 5

    $default  reduce using rule 3 (top_level)

    decl       go to state 34
    func_decl  go to state 10
    seq_decl   go to state 11
    def_decl   go to state 12
    cla_decl   go to state 13
    beh_decl   go to state 14


State 33

    0 $accept: top_level "end of file" .

    $default  accept


State 34

    6 decls: decls decl .

    $default  reduce using rule 6 (decls)


State 35

    4 new_node_stack: . %empty
   35 extentions: ':' . new_node_stack indent_values

    $default  reduce using rule 4 (new_node_stack)

    new_node_stack  go to state 44


State 36

   12 def_newline: . T_NEWLINE
   13            | . '='
   15 seq_decl: T_SEQ keyword_and_ident extentions . def_newline seq_members_nodes

    T_NEWLINE  shift, and go to state 37
    '='        shift, and go to state 38

    def_newline  go to state 45


State 37

   12 def_newline: T_NEWLINE .

    $default  reduce using rule 12 (def_newline)


State 38

   13 def_newline: '=' .

    $default  reduce using rule 13 (def_newline)


State 39

    4 new_node_stack: . %empty
   14 func_decl: T_FUN func_head def_newline . func_body
   55 func_body: . stmts_nodes
   56          | . stmts_nodes let_decls_nodes
   65 stmts_nodes: . new_node_stack stmts

    $default  reduce using rule 4 (new_node_stack)

    new_node_stack  go to state 46
    func_body       go to state 47
    stmts_nodes     go to state 48


State 40

    4 new_node_stack: . %empty  [T_IF, T_THEN, T_ELSE, T_WHILE, T_THAT, T_EACH, T_MAP, T_REDUCE, T_FILTER, T_ECHO, STRING_LITERAL, IDENT, LONG_LITERAL]
  159 func_head: keyword_and_ident '(' . func_def_args
  160          | keyword_and_ident '(' . func_def_args '{' func_def_keyword_args
  163 func_def_args: . ')'
  164              | . new_node_stack args_def ')'

    ')'  shift, and go to state 49

    $default  reduce using rule 4 (new_node_stack)

    new_node_stack  go to state 50
    func_def_args   go to state 51


State 41

   26 def_decl: T_DEF keyword_and_ident def_newline . decl_body
   27 decl_body: . decl_value
   28          | . decl_value T_NEWLINE
   29 decl_value: . decl_primary
   30           | . decl_value '|' decl_value
   31 decl_primary: . keyword_and_ident
   32             | . primary_value
  173 primary_value: . LONG_LITERAL
  174              | . STRING_LITERAL
  175 keyword_and_ident: . IDENT
  176                  | . T_IF
  177                  | . T_THEN
  178                  | . T_ELSE
  179                  | . T_WHILE
  180                  | . T_THAT
  181                  | . T_EACH
  182                  | . T_MAP
  183                  | . T_REDUCE
  184                  | . T_FILTER
  185                  | . T_ECHO

    T_IF            shift, and go to state 15
    T_THEN          shift, and go to state 16
    T_ELSE          shift, and go to state 17
    T_WHILE         shift, and go to state 18
    T_THAT          shift, and go to state 19
    T_EACH          shift, and go to state 20
    T_MAP           shift, and go to state 21
    T_REDUCE        shift, and go to state 22
    T_FILTER        shift, and go to state 23
    T_ECHO          shift, and go to state 24
    STRING_LITERAL  shift, and go to state 52
    IDENT           shift, and go to state 25
    LONG_LITERAL    shift, and go to state 53

    decl_body          go to state 54
    decl_value         go to state 55
    decl_primary       go to state 56
    primary_value      go to state 57
    keyword_and_ident  go to state 58


State 42

   12 def_newline: . T_NEWLINE
   13            | . '='
   33 cla_decl: T_CLA keyword_and_ident extentions . def_newline cla_members_nodes

    T_NEWLINE  shift, and go to state 37
    '='        shift, and go to state 38

    def_newline  go to state 59


State 43

   12 def_newline: . T_NEWLINE
   13            | . '='
   48 beh_decl: T_BEH keyword_and_ident extentions . def_newline beh_members_nodes

    T_NEWLINE  shift, and go to state 37
    '='        shift, and go to state 38

    def_newline  go to state 60


State 44

   35 extentions: ':' new_node_stack . indent_values
   36 indent_values: . indent_value
   37              | . indent_values ',' indent_value
  136 indent_value: . primary
  137             | . indent_value '.' keyword_and_ident
  138 primary: . primary_value
  139        | . keyword_and_ident
  140        | . '[' ']'
  141        | . '[' dict_values ']'
  142        | . '(' expr ')'
  143        | . '{' stmts_nodes '}'
  173 primary_value: . LONG_LITERAL
  174              | . STRING_LITERAL
  175 keyword_and_ident: . IDENT
  176                  | . T_IF
  177                  | . T_THEN
  178                  | . T_ELSE
  179                  | . T_WHILE
  180                  | . T_THAT
  181                  | . T_EACH
  182                  | . T_MAP
  183                  | . T_REDUCE
  184                  | . T_FILTER
  185                  | . T_ECHO

    T_IF            shift, and go to state 15
    T_THEN          shift, and go to state 16
    T_ELSE          shift, and go to state 17
    T_WHILE         shift, and go to state 18
    T_THAT          shift, and go to state 19
    T_EACH          shift, and go to state 20
    T_MAP           shift, and go to state 21
    T_REDUCE        shift, and go to state 22
    T_FILTER        shift, and go to state 23
    T_ECHO          shift, and go to state 24
    STRING_LITERAL  shift, and go to state 52
    IDENT           shift, and go to state 25
    LONG_LITERAL    shift, and go to state 53
    '('             shift, and go to state 61
    '{'             shift, and go to state 62
    '['             shift, and go to state 63

    indent_values      go to state 64
    indent_value       go to state 65
    primary            go to state 66
    primary_value      go to state 67
    keyword_and_ident  go to state 68


State 45

    4 new_node_stack: . %empty
   15 seq_decl: T_SEQ keyword_and_ident extentions def_newline . seq_members_nodes
   16 seq_members_nodes: . new_node_stack seq_members

    $default  reduce using rule 4 (new_node_stack)

    new_node_stack     go to state 69
    seq_members_nodes  go to state 70


State 46
